Added diabetes prediction

--- a/Asp.NetCore/HearthDiseasePrediction/HearthDiseasePrediction/appsettings.json
+++ b/Asp.NetCore/HearthDiseasePrediction/HearthDiseasePrediction/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
+  "Logging": { // Default, all providers.
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning"
+    },
+    "Console": { // Console provider.
+      "LogLevel": {
+        "Microsoft": "Information"
+      }
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
